# minimal-clock

./: .gitignore  .mise.toml  LICENSE  README.md  draft.md  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.kiro/specs/minimal-always-on-top-clock/: design.md  requirements.md  research.md  spec.json  (+1 more)
docs/: README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.ru.md  README.zh.md
src/: clock-entry.tsx  settings-entry.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: apply_settings.toml  get_applied_settings.toml  initialize_clock_window.toml  native_runtime_capabilities.toml  retry_settings_persistence.toml
src-tauri/src/: commands.rs  desktop_runtime.rs  host_config_tests.rs  lib.rs  main.rs  settings_store.rs
src/clock/: AnalogClock.test.tsx  AnalogClock.tsx  ClockApp.test.tsx  ClockApp.tsx  ContextMenu.test.tsx  ContextMenu.tsx  DigitalClock.test.tsx  DigitalClock.tsx  context-menu-native.ts  format.ts  types.ts
src/domain/: events.test.ts  events.ts  settings.test.ts  settings.ts
src/services/: clock-scheduler.test.ts  clock-scheduler.ts  desktop-client.test.ts  desktop-client.ts  use-settings-event.test.ts  use-settings-event.ts  use-updater.ts  use-visibility-event.test.ts  use-visibility-event.ts
src/settings/: SettingsApp.test.tsx  SettingsApp.tsx  StylePreview.tsx
src/styles/: clock.css  settings.css
src/test/: scaffold.test.tsx  setup.ts  sync-flow.test.tsx
