[package]
name = "minimal-clock"
version = "0.1.0"
description = "Minimal always-on-top clock desktop shell"
authors = ["minimal-clock"]
edition = "2021"

[lib]
name = "minimal_clock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"

